# plr

./: .dir-locals.el  .editorconfig  .travis.yml  Makefile  README.md  Solution.pm.R  _meson.build  _meson.build.Test_the_detection_of_the_dependency_libR  _meson.build.Test_the_detection_of_the_dependency_libpostgres  _meson.build.Test_the_detection_of_the_dependency_libpq  _meson_options.txt  _meson_options.txt_postgres_root_additional_plr_option.txt  after_build.sh  appveyor.yml  build_script.sh  changelog.md  clean_pgsql_sln.sh  compilingplr.md  init.sh  install.md  libR.pc  meson.build  msvc.diff  msvc.diff.R  pg_backend_support.c  pg_conversion.c  pg_rsupport.c  pg_userfuncs.c  pggithubbincachefailingfound.sh  plr--8.3.0.18--8.4.sql  plr--8.4--8.5.sql  plr--8.4.4--8.4.5.sql  plr--8.4.5--8.4.6.sql  plr--8.4.6--8.4.7.sql  plr--8.4.7--8.4.8.sql  plr--8.4.8.1--8.4.8.2.sql  plr--8.4.sql  plr--8.5.sql  plr--unpackaged--8.4.sql  plr--unpackaged--8.5.sql  (+9 more)
.github/workflows/: build.yml  buildPLR.yml  buildPLRschedule.yml  schedule.yml
doc/: pg_doc
expected/: bad_fun.out  do.out  opt_window.out  opt_window_frame.out  out_args.out  parallel.out  plr.out  plr12.out  plr_transaction.out
results/: plr.out
sql/: bad_fun.sql  do.sql  opt_window.sql  opt_window_frame.sql  out_args.sql  parallel.sql  plr.sql  plr12.sql  plr_transaction.sql
updates/: plr--8.4--8.4.1.sql  plr--8.4.1--8.4.2.sql  plr--8.4.2--8.4.3.sql  plr--8.4.3--8.4.4.sql
